🛠️ Fix: Sidebar & navbar alignment

--- a/src/assets/styles/_navbar.scss
+++ b/src/assets/styles/_navbar.scss
@@ -22,6 +22,7 @@
     height: $navbar-height;
     @media (max-width: 991px) {
       width: 55px;
+      flex-direction: row-reverse !important;
     }
     .navbar-brand {
       color: lighten(color(gray-dark), 20%);
@@ -66,6 +67,7 @@
     width: calc(100% - #{$sidebar-width-lg});
     height: $navbar-height;
     @media (max-width: 991px) {
+      flex-direction: row-reverse !important;
       width: auto;
       padding-left: 15px;
       padding-right: 15px;
@@ -281,10 +283,11 @@
           @media (max-width: 991px) {
             position: static;
             .navbar-dropdown {
+
               left: 20px !important;
               right: 20px;
               top: $navbar-height;
-              width: calc(100% - 40px);
+              width: 30px;
             }
           }
         }
@@ -375,8 +378,9 @@
 }
 @media (max-width:991px) {
   .navbar {
-    flex-direction: row;
+    flex-direction: row-reverse !important;
     .navbar-brand-wrapper {
+      flex-direction: row-reverse !important;
       width: 75px;
       .navbar-brand {
         &.brand-logo {
@@ -397,7 +401,9 @@
 
 @media (max-width:480px) {
   .navbar {
+    flex-direction: row-reverse !important;
     .navbar-brand-wrapper {
+      flex-direction: column !important;
       width: 55px;
       .brand-logo-mini{
         padding-top: 0px;
